prevent notification count from covering up name

--- a/css/betterboard.css
+++ b/css/betterboard.css
@@ -113,3 +113,8 @@ body{
 .grade10{
   border-left: 2px solid black !important;
 }
+
+
+#badgeTotal{
+  margin-left: 2vw;
+}
